fix: mathjax overflow for displayed mathematics (#32)
release 3.0.1

--- a/src/css/_partial/_post/_content.scss
+++ b/src/css/_partial/_post/_content.scss
@@ -135,4 +135,9 @@
   .align-left {
     text-align: left;
   }
+
+  .MJXc-display {
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
 }
